Fixed compiler errors

--- a/power/src/app/fragebogen/details/comment/comment.component.html
+++ b/power/src/app/fragebogen/details/comment/comment.component.html
@@ -20,7 +20,7 @@
                 class="btn btn-success"
                 i18n-title
                 title="Kommentar speichern"
-                (click)="out.emit({id: id, description: description}); modal.close();">
+                (click)="out.emit({id: id, description: description}); modal?.close();">
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
