--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -45,7 +45,7 @@
                 class="btn btn-success"
                 i18n-title
                 title="Formular veröffentlichen"
-                (click)="Publish(); modal.close();">
+                (click)="Publish(); modal?.close();">
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
