--- a/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
+++ b/power/src/app/fragebogen/editor/condition-modal/condition-modal.component.html
@@ -33,7 +33,7 @@
             class="btn btn-success mr-2"
             i18n-title
             title="Änderungen speichern"
-            (click)="modal.close()">
+            (click)="modal?.close()">
         <svg width="1em"
              height="1em"
              viewBox="0 0 16 16"
