--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -7,7 +7,7 @@
             <!-- [html-validate-disable-next input-missing-label] -->
             <select class="custom-select"
                     [(ngModel)]="item.condition"
-                    (change)="modelChanged($event)"
+                    (change)="modelChanged()"
                     [class.is-invalid]="!item.condition && i !== 0"
                     [disabled]="i === 0"
                     id="conditionCondition{{ i }}{{ uniqId }}"
@@ -29,7 +29,7 @@
                    class="form-control"
                    [attr.list]="'conditionlist-' + uniqId"
                    [(ngModel)]="item.question"
-                   (change)="modelChanged($event)"
+                   (change)="modelChanged()"
                    [class.is-invalid]="!item.question"
                    id="conditionQuestion{{ i }}{{ uniqId }}"
                    name="conditionQuestion{{ i }}{{ uniqId }}"
@@ -46,7 +46,7 @@
             <!-- [html-validate-disable-next input-missing-label] -->
             <select class="custom-select"
                     [(ngModel)]="item.operator"
-                    (change)="switchValueType($event, i); modelChanged($event)"
+                    (change)="switchValueType($event, i); modelChanged()"
                     [class.is-invalid]="!item.operator"
                     id="conditionOperator{{ i }}{{ uniqId }}"
                     name="conditionOperator{{ i }}{{ uniqId }}"
@@ -84,7 +84,7 @@
                    class="form-control"
                    [attr.list]="'conditionlist-' + uniqId"
                    [(ngModel)]="item.value"
-                   (change)="modelChanged($event)"
+                   (change)="modelChanged()"
                    *ngIf="!(item.operator === 'anyof' || item.operator === 'allof')"
                    [class.is-invalid]="!item.value"
                    id="conditionValueA{{ i }}{{ uniqId }}"
