--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -7,7 +7,7 @@
             <!-- [html-validate-disable-next input-missing-label] -->
             <select class="custom-select"
                     [(ngModel)]="item.type"
-                    (change)="switchType($event, i); modelChanged($event)"
+                    (change)="switchType($event, i); modelChanged()"
                     [class.is-invalid]="!item.type"
                     id="validatorType{{ i }}{{ uniqId }}"
                     name="validatorType{{ i }}{{ uniqId }}"
@@ -36,7 +36,7 @@
             <input type="number"
                    class="form-control"
                    [(ngModel)]="item.min"
-                   (change)="modelChanged($event)"
+                   (change)="modelChanged()"
                    [class.is-invalid]="!item.min && item.min !== 0 || item.min < 0 || item.min % 1 !== 0"
                    step="1"
                    min="0"
@@ -56,7 +56,7 @@
             <input type="number"
                    class="form-control"
                    [(ngModel)]="item.max"
-                   (change)="modelChanged($event)"
+                   (change)="modelChanged()"
                    [class.is-invalid]="!item.max && item.max !== 0 || item.max < 0 || item.min > item.max || item.max % 1 !== 0"
                    step="1"
                    min="0"
@@ -76,7 +76,7 @@
             <input type="text"
                    class="form-control"
                    [(ngModel)]="item.regex"
-                   (change)="modelChanged($event)"
+                   (change)="modelChanged()"
                    [class.is-invalid]="!item.regex || isRegExInvalid(item.regex)"
                    id="validatorData{{ i }}{{ uniqId }}"
                    name="validatorData{{ i }}{{ uniqId }}"
@@ -109,7 +109,7 @@
                    class="form-control"
                    [attr.list]="'validationlist-' + uniqId"
                    [(ngModel)]="item.question"
-                   (change)="modelChanged($event)"
+                   (change)="modelChanged()"
                    [class.is-invalid]="!item.question"
                    id="validatorExpQuestion{{ i }}{{ uniqId }}"
                    name="validatorExpQuestion{{ i }}{{ uniqId }}"
@@ -127,7 +127,7 @@
             <!-- [html-validate-disable-next input-missing-label] -->
             <select class="custom-select"
                     [(ngModel)]="item.operator"
-                    (change)="switchValueType($event, i); modelChanged($event)"
+                    (change)="switchValueType($event, i); modelChanged()"
                     [class.is-invalid]="!item.operator"
                     id="validatorExpOperator{{ i }}{{ uniqId }}"
                     name="validatorExpOperator{{ i }}{{ uniqId }}"
@@ -165,7 +165,7 @@
                    class="form-control"
                    [attr.list]="'validationlist-' + uniqId"
                    [(ngModel)]="item.value"
-                   (change)="modelChanged($event)"
+                   (change)="modelChanged()"
                    *ngIf="!(item.operator === 'anyof' || item.operator === 'allof')"
                    [class.is-invalid]="!item.value"
                    id="validatorExpValueA{{ i }}{{ uniqId }}"
