--- a/power/src/app/fragebogen/details/settings/settings.component.html
+++ b/power/src/app/fragebogen/details/settings/settings.component.html
@@ -46,7 +46,7 @@
                 class="btn btn-success"
                 i18n-title
                 title="Formular teilen"
-                (click)="this.out.emit({id: old.id, tags: tags, groups: groups, owner: owner}); modal.close();">
+                (click)="this.out.emit({id: old.id, tags: tags, groups: groups, owner: owner}); modal?.close();">
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
