Fix compiler errors

--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -64,7 +64,7 @@
 	 #echartsInst></div>-->
 
     <div>
-        <p *ngIf="chartOption?.series.length >= 2"
+        <p *ngIf="getSeriesOption().length >= 2"
            i18n>Für die ausgewählte Koordinate liegen seit dem Jahr 2013 mehrere
             Bodenrichtwertzonen vor. In der zeitlichen Entwicklungsreihe sind alle Zonen für die Zeiträume ihrer
             Gültigkeit dargestellt.</p>
