--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -502,7 +502,7 @@
                                     *dropdownMenu
                                     class="dropdown-menu"
                                     role="menu"
-                                    aria-labelledby="button-basic-{{ i }}">
+                                    attr.aria-labelledby="button-basic-{{ i }}">
                                     <li role="menuitem"
                                         *ngFor="let container of storage.model.pages; index as j">
                                         <a class="dropdown-item"
