--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -94,7 +94,7 @@
             <power-forms-editor-localeinput [(locale)]="item.text"
                                             eid="validatorText{{ i }}{{ uniqId }}"
                                             [required]="true"
-                                            maxlength="200"
+                                            [maxlength]="200"
                                             i18n-placeholder
                                             placeholder="Fehlermeldung für Nutzende"></power-forms-editor-localeinput>
         </div>
