--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -66,7 +66,7 @@
 
                     <div class="dropdown-menu btn-block"
                          *dropdownMenu
-                         aria-labelledby="dropdownBasic2-{{p}}">
+                         attr.aria-labelledby="dropdownBasic2-{{p}}">
                         <button type="button"
                                 class="dropdown-item"
                                 (click)="onChangeCat(select['preset'], f)"
@@ -201,7 +201,7 @@
                                            class="custom-control-input"
                                            (click)="toggleAllSelect(itm)"
                                            i18n-aria-label
-                                           aria-label="Alles/Nichts auswählen (Vergleich {{i+1}})"
+                                           attr.aria-label="Alles/Nichts auswählen (Vergleich {{i+1}})"
                                            *ngIf="select['preset'].length > 1">
 
                                     <label for="{{i}}vall"
@@ -385,7 +385,7 @@
                             aria-controls="dropdown-basic"
                             aria-haspopup="true"
                             i18n-aria-label
-                            aria-label="Startzeitraum auswählen. Aktuelle Auswahl: {{nipixRuntime.availableQuartal[nipixRuntime.state.rangeStartIndex]}}">
+                            attr.aria-label="Startzeitraum auswählen. Aktuelle Auswahl: {{nipixRuntime.availableQuartal[nipixRuntime.state.rangeStartIndex]}}">
                         {{nipixRuntime.availableQuartal[nipixRuntime.state.rangeStartIndex]}}
                         <span class="caret"></span>
                     </button>
@@ -411,7 +411,7 @@
                             id="dropdownTime2"
                             aria-haspopup="listbox"
                             i18n-aria-label
-                            aria-label="Endzeitraum auswählen. Aktuelle Auswahl: {{nipixRuntime.availableQuartal[nipixRuntime.state.rangeEndIndex]}}">
+                            attr.aria-label="Endzeitraum auswählen. Aktuelle Auswahl: {{nipixRuntime.availableQuartal[nipixRuntime.state.rangeEndIndex]}}">
                         {{nipixRuntime.availableQuartal[nipixRuntime.state.rangeEndIndex]}}
                         <span class="caret"></span>
                     </button>
