--- a/power/src/app/map-client/map-client.component.html
+++ b/power/src/app/map-client/map-client.component.html
@@ -13,7 +13,7 @@
 
                         <ng-content select="[ribbon]"></ng-content>
 
-                        <div style="width: 100%; height: 100%"
+                        <div style="width: 100%; height: 100%;"
                              #mapContainer></div>
                     </div>
                 </div>
